--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-3 col-lg-4"></div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
+    <div class="col-sm-4"></div>
+    <div class="col-xs-12 col-sm-4">
       <div class="card">
         <img class="card-img-top" src="assets/images/adrianlogo.png" alt="Card image cap">
         <div class="card-body">
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-3 col-lg-4"></div>
+    <div class="col-sm-4"></div>
   </div>
 </div>
