Modified the project dashboard component

--- a/src/app/fibre/components/projects/project-dashboard/project-dashboard.component.sass
+++ b/src/app/fibre/components/projects/project-dashboard/project-dashboard.component.sass
@@ -104,13 +104,13 @@ h2
   color: #3b3e42
   text-decoration: none
 
-.container-projects
+.container-flex .projects
   width: fit-content
   margin-left: 25px
   padding-right: 0px
 
-.project-card
-  width: 350px
+// .project-card
+//   width: 350px
 
 .upload-bom
   padding-top: 10px
