--- a/src/app/fibre/components/projects/project-dashboard/project-dashboard.component.html
+++ b/src/app/fibre/components/projects/project-dashboard/project-dashboard.component.html
@@ -17,7 +17,7 @@
         <div class="row m-0">
           <div class="col-sm-10">
             <form class="form-header form-inline" role="search" action="" method="get">
-              <input class="au-input au-input--sm" type="text" name="search"  placeholder="Search for a project"/>
+              <input class="au-input au-input--sm" type="text" name="search" [(ngModel)]="searchTerm" autocomplete="off" placeholder="Search for a project"/>
             </form>
           </div>
           <div class="col-sm-2">
@@ -31,23 +31,25 @@
       </div>
       <div class="col-sm-12"><hr></div>
 
-      <div class="container-projects">
+      <div class="container-flex projects">
         <div class="row">
-          <a class="col-sm-4 col-sm-offset-2 project-details-link" routerLink="/fibre/sites" routerLinkActive="active">
+          <a class="col-sm-3 project-details-link" *ngFor="let project of project$ | filter:searchTerm" routerLink="/fibre/sites" routerLinkActive="active">
             <div class="au-card project-card">
               <div class="au-card-inner">
-                <div class="au-card image-card">
-<!--                  <img src="assets/images/index.jpeg" alt="logo">-->
-                </div>
+                <img src="assets/images/emblem.png" alt="logo" style="width: 50px; height: 50px">
+
+                <!-- <div class="au-card image-card">
+                  col-sm-offset-2      
+                </div> -->
                 <h2 class="title-2 tm-b-5"></h2>
                 <div class="chart-note-wrap">
-                  <div class="chart-note mr-0 d-block">
+                  <!-- <div class="chart-note mr-0 d-block">
                     <span class="dot dot--blue"></span>
                     <span class="fetched-data"><b>Project ID: </b><span></span></span>
-                  </div>
+                  </div> -->
                   <div class="chart-note mr-0 d-block">
                     <span class="dot dot--red"></span>
-                    <span class="fetched-data"><b>Project name: </b><span></span></span>
+                    <span class="fetched-data"><b>Project name: {{project.project_name}} </b><span></span></span>
                   </div>
                   <div class="chart-note mr-0 d-block">
                     <span class="dot dot--red"></span>
@@ -66,7 +68,7 @@
                   <br>
                   <div class="chart-note mr-0 d-block">
                     <div class="time-block">
-                      <span class="date">Started: </span>
+                      <span class="date">Started: {{project.created_at | date:'mediumDate'}} </span>
                     </div>
                     <div class="upload-bom">
                     <span class="time-green">Upload BOM</span>
