--- a/src/app/fibre/components/projects/project-form/project-form.component.html
+++ b/src/app/fibre/components/projects/project-form/project-form.component.html
@@ -1,2 +1,42 @@
-<p>project-form works!</p>
+<app-sidebar></app-sidebar>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-4"></div>
+      <div class="col-xs-12 col-sm-4">
+        <div class="card">
+          <!-- <img class="card-img-top" src="assets/images/adrianlogo.png" alt="Card image cap"> -->
+          <div class="card-body">
+            <form [formGroup]="projectForm" (ngSubmit)="saveProject()">
+              <h5 class="card-title text-center">New Project</h5>
+              <div class="form-group">
+                <!-- <label>Project Name</label> -->
+                <input type="text" class="form-control" formControlName="project_name" id="project_name" placeholder="Project Name" aria-describedby="sizing-addon1" 
+                [ngClass]="{'is-invalid': projectForm.get('project_name').touched && projectForm.get('project_name').invalid}" />
+                <div class="invalid-feedback">
+                  <div>Project Name is required</div>
+                </div>
+              </div>
+              <div class="form-group">
+                <!-- <label>Site</label> -->
+                <select class="form-control" formControlName="site_name" id="site_name">
+                  <option value="" disabled selected>Select site</option>
+                  <option *ngFor="let site of site$" [value]="site.id">
+                    {{site.site_name}}
+                  </option>
+                </select>
+              </div>
+              <div class="form-group">
+                <input type="date" class="form-control" formControlName="start_date" id="start_date" placeholder="Start date" aria-describedby="sizing-addon1"/>
+              </div>
+              <div class="form-group">
+                <button type="submit" class="btn btn-primary" [disabled]="projectForm.invalid" title="First fill in all the fields">Create</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4"></div>
+    </div>
+</div>
+  
       
