--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,34 +1,83 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-4"></div>
-    <div class="col-xs-12 col-sm-4">
-      <div class="card">
-        <img class="card-img-top" src="assets/images/adrianlogo.png" alt="Card image cap">
-        <div class="card-body">
-          <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-            <h5 class="card-title">Login</h5>
-            <div class="alert alert-danger" role="alert" *ngIf="loginError">{{loginError}}</div>
-            <div class="form-group">
-              <label for="username"></label>
-              <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.username.errors }" placeholder="Username"/>
-              <div *ngIf="submitted && form.username.errors" class="invalid-feedback">
-                <div *ngIf="form.username.errors.required">Username is required</div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="password"></label>
-              <input type="password" formControlName="password" class="form-control" id="pwd" [ngClass]="{ 'is-invalid': submitted && form.password.errors }" placeholder="Password" data-toggle="password"/>
-              <div *ngIf="submitted && form.password.errors" class="invalid-feedback">
-                <div *ngIf="form.password.errors.required">Password is required</div>
-              </div>
-            </div>
-            <div class="form-group">
-              <button [disabled]="loading" class="btn btn-primary">Login</button>
-            </div>
-          </form>
+<!--<header class="sticky-top">-->
+
+<!--  <div id="header_title">-->
+<!--    <h4><span class="highlight">Imprint</span>Africa</h4>-->
+<!--  </div>-->
+
+<!--</header>-->
+
+
+<section class="section">
+
+  <!-- Image logo -->
+  <div class="image-card">
+    <img src="assets/images/adrianlogo.png" alt="">
+  </div>
+
+
+  <!-- Title -->
+  <div class="title">
+    <h4>Sign In</h4>
+  </div>
+
+
+  <!-- Login Form -->
+
+  <form #myForm='ngForm' [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form">
+
+
+    <!-- Username -->
+    <div class="form-group">
+
+      <div class="input-group input-group-sm mb-3">
+
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="inputGroup-sizing-sm"><i class="fa fa-envelope"></i></span>
+        </div>
+
+        <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm"
+               formControlName="username"  [class.is-invalid]="form.username.invalid && form.username.touched" placeholder="Username">
+        <div *ngIf="submitted && form.username.errors" class="invalid-feedback">
+          <div  *ngIf="form.username.errors.required">Username is Required</div>
+<!--          <div *ngIf="form.email.errors.email">Email format is incorrect</div>-->
         </div>
       </div>
+
     </div>
-    <div class="col-sm-4"></div>
-  </div>
-</div>
+
+
+    <!-- Password -->
+    <div class="form-group">
+
+      <div class="input-group input-group-sm mb-3">
+
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="inputGroup-sizing-sm"><i class="fa fa-key"></i></span>
+        </div>
+
+        <input [type]="togglePassword" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm"
+               formControlName="password" class="form-control" [class.is-invalid]="form.password.invalid && form.password.touched" placeholder="Password">
+
+        <div class="input-group-append">
+          <span class="input-group-text" id="inputGroup-sizing-sm" [hidden]="showPasswordIcon" (click)="showPassword()"><i class="fa fa-eye"></i></span>
+          <span class="input-group-text" id="inputGroup-sizing-sm" [hidden]="hidePasswordIcon" (click)="hidePassword()"><i class="fa fa-eye-slash"></i></span>
+        </div>
+
+        <div *ngIf="submitted && form.password.errors" class="invalid-feedback">
+          <div *ngIf="form.password.errors.required">Password is required</div>
+        </div>
+
+
+      </div>
+
+    </div>
+
+
+    <button [disabled]="loading" class="btn btn-button-theme">Login</button>
+
+
+
+  </form>
+
+</section>
+
