--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -1,4 +1,20 @@
 #card_section
+  display: block
+  align-items: center
+  -webkit-box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.2)
+  -moz-box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.2)
+  box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.2)
+  border-radius: 10px
+  max-width: 30em
+  min-width: 30em
+  max-height: 30em
+  min-height: 20em
+  padding: 15px 0 15px 0
+  margin: 200px 100px 90px 300px
+
+  .home-title
+    justify-content: center
+    color: #1D1E56
 
   .card
     -webkit-box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.2)
@@ -12,6 +28,7 @@
     margin: 0 1em 1em 0
     cursor: pointer
     font-family: Montserrat
+
     .card-body
 
       .card-img
@@ -26,3 +43,5 @@
 a
   text-decoration: none
   color: #3b3e42
+
+
