--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,36 +1,36 @@
-<section id="title_section">
-  <h4>Welcome, choose where to go</h4>
-</section>
+<div class="container">
 
 <section id="card_section" class="card-group">
 
-  <a class="card mx-auto"  routerLink="/fibre/teams" routerLinkActive="active">
 
-    <div class="card-body" >
-      <div class="card-text card-details">BTS</div>
-    </div>
+  <h4 class="home-title">Welcome, choose where to go</h4>
 
-  </a>
-
-  <a class="card mx-auto"  routerLink="" routerLinkActive="active">
-
+  <a class="card mx-auto" routerLink="/fibre/teams" routerLinkActive="active">
     <div class="card-body">
-      <div class="card-text card-details">Fibre to the home</div>
+      <div class="card-text card-details">BTS <i class="fa fa-arrow-right pull-right"></i></div>
     </div>
-
   </a>
 
-  <a class="card mx-auto"  routerLink="/fibre/projects" routerLinkActive="active">
-
-    <div class="card-body" >
-      <div class="card-text card-details">Fibre to the site <span class="project-data"></span></div>
+  <a class="card mx-auto" routerLink="" routerLinkActive="active">
+    <div class="card-body">
+      <div class="card-text card-details">Fibre to the home <i class="fa fa-arrow-right pull-right"></i></div>
     </div>
-
   </a>
+
+  <a class="card mx-auto" routerLink="/fibre/projects" routerLinkActive="active">
+    <div class="card-body">
+      <div class="card-text card-details">Fibre to the site <i class="fa fa-arrow-right pull-right"></i>
+        <span class="project-data"></span></div>
+    </div>
+  </a>
+
+  <div class="col text-center">
+
+  <button class="btn btn-outline-danger btn-sm" (click)="logout()">Logout</button>
+  </div>
 
 </section>
 
 
-  <div class="logout">
-  <button class="btn btn-outline-danger my-2 my-sm-0 btn-sm" (click)="logout()">Logout</button>
-  </div>
+
+</div>
