styling on create project form and sidebar

--- a/src/app/fibre/components/home-fibre/home.component.html
+++ b/src/app/fibre/components/home-fibre/home.component.html
@@ -74,7 +74,7 @@
 
   <ul class="navbar-nav nav-pills">
 
-    <li class="nav-item"><a href="/projects" data-target="#" class="nav-link">Projects</a></li>
+    <li class="nav-item"><a href="/projects" data-target="#" class="nav-link">Projects<i class="fas fa-broadcast-tower"></i></a></li>
     <li class="nav-item"><a href="#" data-target="#" class="nav-link">Monitoring</a></li>
     <li class="nav-item"><a href="#" data-target="#" class="nav-link">Scorecard</a></li>
     <li class="nav-item"><a href="#" data-target="#" class="nav-link">Calendar</a></li>
