--- a/src/app/fibre/components/home-fibre/projects/project-dashboard/project-dashboard.component.html
+++ b/src/app/fibre/components/home-fibre/projects/project-dashboard/project-dashboard.component.html
@@ -10,7 +10,7 @@
     <input type="text" class="form-control form-control-sm search-input">
     <button class="btn btn-sm btn-outline-warning btn-search">Search</button>
   </form>
-  <button class="btn btn-sm btn-primary ml-auto btn-bom">Add Project</button>
+  <button class="btn btn-sm btn-primary ml-auto btn-bom" routerLink="/fibre/createproject">Add Project</button>
 </section>
 
 <!-- line -->
