--- a/src/app/fibre/components/home-fibre/home.component.sass
+++ b/src/app/fibre/components/home-fibre/home.component.sass
@@ -180,13 +180,13 @@ header
 // Side Bar
 #sidebar
   font-family: Montserrat
-  width: 200px
+  width: 100px
   position: fixed
   top: 60px
   left: 0
   height: 100%
   z-index: 0
-  background: color(nevyBlueTheme)
+  background-color: #0A2239
   color: #fff
   transition: all 0.6s
 
@@ -212,6 +212,8 @@ header
 
     li
       font-size: 13px
+      margin-top: 40px
+
       a
         color: white
 
@@ -220,9 +222,9 @@ header
           color: #000000 !important
 
         &:hover
-          color: white !important
+          color: #F28500 !important
           font-weight: bold !important
-          text-decoration: underline !important
+          text-decoration: none !important
 
     //    Projects dropdown
     #projects_dropdown
@@ -250,7 +252,7 @@ header
 // Main
 main
   max-width: 100%
-  margin: 0px 0px 0px 200px
+  margin: 50px 20px 0px 150px
   padding: .2em .5em .2em .5em
   transition: all 0.6s
   overflow: hidden
