--- a/src/app/fibre/components/home-fibre/projects/project-form/project-form.component.html
+++ b/src/app/fibre/components/home-fibre/projects/project-form/project-form.component.html
@@ -1,12 +1,12 @@
-<div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-4"></div>
-      <div class="col-xs-12 col-sm-4">
+<div class="container">
+
+<section id="card_section" class="card-group">
         <div class="card">
           <!-- <img class="card-img-top" src="assets/images/adrianlogo.png" alt="Card image cap"> -->
           <div class="card-body">
             <form [formGroup]="projectForm" (ngSubmit)="saveProject()">
-              <h5 class="card-title text-center">New Project</h5>
+              <h4 class="form-title">Create a new project</h4>
+
               <div class="form-group">
                 <!-- <label>Project Name</label> -->
                 <input type="text" class="form-control" formControlName="project_name" id="project_name" placeholder="Project Name" aria-describedby="sizing-addon1" 
@@ -28,13 +28,12 @@
                 <input type="date" class="form-control" formControlName="start_date" id="start_date" placeholder="Start date" aria-describedby="sizing-addon1"/>
               </div>
               <div class="form-group">
-                <button type="submit" class="btn btn-primary" [disabled]="projectForm.invalid" title="First fill in all the fields">Create</button>
+                <div class="col text-center">
+                <button type="submit" class="btn btn-submit" [disabled]="projectForm.invalid" title="First fill in all the fields">Create</button>
+              </div>
               </div>
             </form>
           </div>
         </div>
-      </div>
-      <div class="col-sm-4"></div>
-    </div>
+</section>
 </div>
-  
