--- a/src/app/fibre/components/home-fibre/projects/project-form/project-form.component.sass
+++ b/src/app/fibre/components/home-fibre/projects/project-form/project-form.component.sass
@@ -1,54 +1,56 @@
-.container-fluid
-      height: 100%
-      position: absolute
-      top: 0
-      right: 0
-      bottom: 0
-      left: 0
-      z-index: 1
+#card_section
+  display: block
+  align-items: center
+  max-width: 30em
+  min-width: 30em
+  max-height: 30em
+  min-height: 20em
+  padding: 15px 0 15px 0
+  margin: 100px 100px 90px 300px
 
-.card
-    margin: 150px 95px
-    border: 1px solid #F2F2F2
-    padding: 30px 25px
-    box-sizing: border-box
-    box-shadow: 0px 5px 18px rgba(180, 180, 180, 0.25)
+  .form-title
+    justify-content: center
+    color: #1D1E56
+
+  .card
+    -webkit-box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.2)
+    -moz-box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.2)
+    box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.2)
+    border: none
+    background-color: white
     border-radius: 10px
-    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3)
-    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3)
-
-.card .card-title
-    margin: 0 100px 25px  
-    left: 50%
+    max-width: 30em
+    min-width: 30em
+    margin: 0 1em 1em 0
+    cursor: pointer
     font-family: Montserrat
-    font-style: normal
-    font-weight: bold
-    font-size: 20px
-    display: flex
-    color: #000000
-    text-align: center
 
-.card .card-body
-    padding: 5px
+    .card-body
 
-// .form-group
-//     margin: auto
+      .card-img
+        box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1)
+        width: fit-content
+        img
+          width: 5rem
+
+    &:hover
+      box-shadow: 0 5px 5px rgba(0, 0, 0, .3)
+
 
 .form-group .form-control
     font-size: 16px
     background: #f2f2f5
+    width: 450px
     height: auto
     padding: 7px
     -webkit-box-sizing: border-box
     -moz-box-sizing: border-box
     box-sizing: border-box
 
-.form-group .btn-primary
-    margin-top: 30px
-    border: none
-    padding: 10px
-    background: #111E6C
-    width: 100%
-    text-align: center
-    text-transform: uppercase
-
+.form-group .btn-submit
+  font-family: Montserrat
+  font-size: 20px
+  color: #14A085
+  background: rgba(46, 213, 115, 0.4)
+  border: none
+  margin-top: 10px
