Fibre to the home module plus integration for fibre to the site

--- a/src/app/fibre/components/home-fibre/sites/site-dashboard/site-dashboard.component.sass
+++ b/src/app/fibre/components/home-fibre/sites/site-dashboard/site-dashboard.component.sass
@@ -23,7 +23,7 @@ $opacity: .9
   text-align: left
   border-radius: 5px
   color: #3b3e42
-  font-family: Montserrat
+  font-family: 'Open Sans', sans-serif
 // box-shadow: 0 5px 5px rgba(0, 0, 0, .3)
 
 // Search Section
