--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
     </div>
   </a>
 
-  <a class="card mx-auto" routerLink="" routerLinkActive="active">
+  <a class="card mx-auto" routerLink="/fibre-home/projects" routerLinkActive="active">
     <div class="card-body">
       <div class="card-text card-details">Fibre to the home <i class="fa fa-arrow-right pull-right"></i></div>
     </div>
