--- a/src/app/fibre-home/components/home-fibrehome/projects/project-dashboard/project-dashboard.component.html
+++ b/src/app/fibre-home/components/home-fibrehome/projects/project-dashboard/project-dashboard.component.html
@@ -1,6 +1,6 @@
 <!-- Title Section -->
 <section id="title_section">
-  <h4>Fibre to the Site Projects</h4>
+  <h4>Fibre to the Home Projects</h4>
   <h6>Track performance and progress across different projects</h6>
 </section>
 
@@ -19,16 +19,16 @@
 <!-- Cards Sections -->
 <section id="card_section" class="card-group">
 
-  <a class="card mr-auto" *ngFor="let project of project$ | filter:searchTerm" routerLink="/fibre/sites" routerLinkActive="active">
+  <a class="card mr-auto" routerLink="/fibre-home/project-teams" routerLinkActive="active">
 
     <div class="card-body" >
       <div class="card-img">
         <img src="assets/images/adrianlogo.png" alt="card-logo">
       </div>
 
-      <div class="card-text card-details">Project name: <span class="project-data">{{project.project_name}}</span></div>
-      <div class="card-text card-details">No. of sites: <span class="project-data">{{project.sites_no}}</span></div>
-      <div class="card-text card-details">Started: <span class="project-data">{{project.created_at | date:'mediumDate'}}</span></div>
+      <div class="card-text card-details">Project name: <span class="project-data"></span></div>
+      <div class="card-text card-details">No. of sites: <span class="project-data"></span></div>
+      <div class="card-text card-details">Started: <span class="project-data"></span></div>
 
 
 
