--- a/src/app/fibre/components/home-fibre/sites/site-dashboard/site-dashboard.component.html
+++ b/src/app/fibre/components/home-fibre/sites/site-dashboard/site-dashboard.component.html
@@ -38,16 +38,19 @@
 <!-- Cards Sections -->
 <section id="card_section" class="card-group">
 
-  <a class="card mr-auto"  routerLink="/fibre/site-teams" routerLinkActive="active">
+  <a class="card mr-auto" *ngFor="let fttsSite of listOfSites" routerLink="/fibre/site-teams" routerLinkActive="active">
 
-    <div class="card-body" >
+    <div class="card-body" *ngFor="let site of site$" >
 <!--      <div class="card-img">-->
 <!--        <img src="assets/images/adrianlogo.png" alt="card-logo">-->
 <!--      </div>-->
 
-      <div class="card-text card-details">Site name: <span class="project-data"></span></div>
-      <div class="card-text card-details">Site ID: <span class="project-data"></span></div>
-      <div class="card-text card-details">Site location: <span class="project-data"></span></div>
+      <div class="card-text card-details"><b>Site name:</b> <span class="project-data">{{site.site_name}}</span></div>
+      <div class="card-text card-details"><b>Site ID:</b> <span class="project-data">{{site.id}}</span></div>
+      <div *ngFor="let loc of location$">
+      <div class="card-text card-details" *ngIf="loc.id === site.location"><b>Site location:</b> </div>
+        <span class="project-data">{{loc.location_name}}</span>
+      </div>
 
 
 
@@ -58,55 +61,6 @@
       <div class="progress project-progress">
         <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:10%"></div>
       </div>
-
-    </div>
-
-  </a>
-  <a class="card mr-auto"  routerLink="/fibre/site-teams" routerLinkActive="active">
-
-    <div class="card-body" >
-      <!--      <div class="card-img">-->
-      <!--        <img src="assets/images/adrianlogo.png" alt="card-logo">-->
-      <!--      </div>-->
-
-      <div class="card-text card-details">Site name: <span class="project-data"></span></div>
-      <div class="card-text card-details">Site ID: <span class="project-data"></span></div>
-      <div class="card-text card-details">Site location: <span class="project-data"></span></div>
-
-
-
-      <div class="d-flex justify-content-end">
-        <span class="fetched-data">10%</span>
-      </div>
-
-      <div class="progress project-progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:10%"></div>
-      </div>
-
-    </div>
-
-  </a>
-  <a class="card mr-auto"  routerLink="/fibre/site-teams" routerLinkActive="active">
-
-    <div class="card-body" >
-      <!--      <div class="card-img">-->
-      <!--        <img src="assets/images/adrianlogo.png" alt="card-logo">-->
-      <!--      </div>-->
-
-      <div class="card-text card-details">Site name: <span class="project-data"></span></div>
-      <div class="card-text card-details">Site ID: <span class="project-data"></span></div>
-      <div class="card-text card-details">Site location: <span class="project-data"></span></div>
-
-
-
-      <div class="d-flex justify-content-end">
-        <span class="fetched-data">10%</span>
-      </div>
-
-      <div class="progress project-progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:10%"></div>
-      </div>
-
     </div>
 
   </a>
